-add fizzbuzz function -add onclick event for submit button -complete fizzbuzz refactor

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 	<div class="question-box">
-		<h3>Enter a number to play FizzBuzz!</h3>
-		<input type="text">
+		<h3>Enter a whole number to play FizzBuzz!</h3>
+		<input type="text" id="userInput">
+		<button type="submit" id="submission">Submit</button>
 	</div><br>
 	
 	
